Revision history for Return-Set

0.03
	Explictly die when no arguments are given
	Bump the version of Validate::Params::Strict to get latest features to Test::Returns

0.02	Mon Jul 28 20:42:49 EDT 2025
	Fix the pre-req versions

0.01	Mon Jul 28 15:05:32 EDT 2025
        First draft